# nexus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 207008a05890_add_error_detail_to_documents.py  5fc608668c2c_add_refresh_tokens_table.py  7a7c3a5d9fbb_create_core_schema.py
apps/api/app/: main.py
apps/api/app/api/: api_keys.py  auth.py  chunks.py  conversations.py  documents.py
apps/api/app/core/: config.py  db.py  logging.py  middleware.py  security.py
apps/api/app/graph/: rag_graph.py
apps/api/app/models/: __init__.py  api_key.py  base.py  chunk.py  citation.py  conversation.py  document.py  message.py  organization.py  refresh_token.py  user.py
apps/api/app/schemas/: api_key.py  auth.py  chunk.py  conversation.py  document.py
apps/api/app/services/: auth_service.py  chunking_service.py  embedding_service.py  generation_service.py  hybrid_search_service.py  ingestion_service.py  lexical_search_service.py  reranking_service.py  vector_store_service.py
apps/api/app/workers/: jobs.py  worker.py
apps/api/tests/: conftest.py  test_api_keys.py  test_auth_routes.py  test_auth_service.py  test_chunk_fts.py  test_chunking_service.py  test_chunks.py  test_conversations.py  test_documents.py  test_embedding_service.py  test_generation_service.py  test_health.py  test_hybrid_search_service.py  test_lexical_search_service.py  test_logging.py  test_openapi_contract.py  test_process_document_job.py  test_rag_graph.py  test_reranking_service.py  test_schema_roundtrip.py  test_vector_store_service.py
apps/api/tests/fixtures/: plain_text.txt
apps/web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/chat/: page.tsx
apps/web/app/(app)/documents/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: StatusBadge.test.tsx  StatusBadge.tsx
apps/web/components/auth/: AuthGuard.test.tsx  AuthGuard.tsx  LoginForm.test.tsx  LoginForm.tsx
apps/web/components/chat/: ChatWorkspace.tsx  CitationPanel.tsx  ConversationSidebar.test.tsx  ConversationSidebar.tsx  ConversationThread.test.tsx  ConversationThread.tsx  MessageContent.tsx
apps/web/components/documents/: DocumentList.test.tsx  DocumentList.tsx  DocumentStatusBadge.tsx  DocumentUploadForm.test.tsx  DocumentUploadForm.tsx
apps/web/components/shell/: AppNav.test.tsx  AppNav.tsx
apps/web/lib/: api-client.test.ts  api-client.ts  chat.ts  citations.test.ts  citations.ts  documents.test.ts  documents.ts  token-storage.ts  types.ts
docs/: ARCHITECTURE.md  PRD.md  ROADMAP.md  TDD.md
infra/: docker-compose.yml
