[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-api"
version = "0.1.0"
description = "Nexus API service: ingestion, hybrid retrieval, reranking, and RAG orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.13,<1.14",
    "redis>=5.0,<6",
    "rq>=1.16,<2",
    "argon2-cffi>=23.1,<24",
    "pyjwt>=2.8,<3",
    "email-validator>=2.1,<3",
    "python-multipart>=0.0.9,<0.1",
    "pypdf>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<0.6",
    "mypy>=1.10,<1.11",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6",
    "httpx>=0.27,<0.28",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom is `param: T = Depends(...)` (and the
# same for Header/Query/Path/Body/Cookie) -- these calls are meant to be
# evaluated once per parameter default, not treated as a mutable-default
# footgun, so they're exempted from B008 rather than rewritten per call site.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.File",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
# SQLAlchemy's async engine bridges its traditionally-sync Core/ORM
# internals into asyncio via greenlet (see sqlalchemy.util.concurrency).
# Without telling coverage.py about that, its default sys.settrace-based
# tracer silently stops recording lines once execution crosses a greenlet
# switch (e.g. right after any `await session.execute(...)` /
# `await session.flush()` / `await session.commit()`), which under-reports
# coverage for every route and dependency that touches the database.
concurrency = ["greenlet", "thread"]
